@@ -1,54 +1,0 @@
-usr/bin/krcdnotifieritem
-usr/lib/kde4/kcm_remotecontrol.so
-usr/lib/kde4/kded_kremotecontroldaemon.so
-usr/lib/kde4/kremotecontrol_lirc.so
-usr/lib/kde4/plasma_engine_kremoteconrol.so
-usr/lib/liblibkremotecontrol.so.1
-usr/lib/liblibkremotecontrol.so.1.0.0
-usr/share/applications/kde4/krcdnotifieritem.desktop
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/AddAction.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/AddActionOptions.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/AddDBusAction.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/AddMode.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/AddProfileAction.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/AutoPopulate.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/EditMasterMode.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/common
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/index.cache.bz2
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/index.docbook
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/irkick.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/irkickoff.png
-usr/share/doc/kde/HTML/en/kcontrol/kremotecontrol/kcmremotecontrol.png
-usr/share/icons/hicolor/128x128/devices/infrared-remote.png
-usr/share/icons/hicolor/16x16/devices/infrared-remote.png
-usr/share/icons/hicolor/22x22/actions/krcd_flash.png
-usr/share/icons/hicolor/22x22/actions/krcd_off.png
-usr/share/icons/hicolor/22x22/apps/krcd.png
-usr/share/icons/hicolor/22x22/devices/infrared-remote.png
-usr/share/icons/hicolor/32x32/devices/infrared-remote.png
-usr/share/icons/hicolor/42x42/devices/infrared-remote.png
-usr/share/icons/hicolor/48x48/devices/infrared-remote.png
-usr/share/icons/hicolor/64x64/devices/infrared-remote.png
-usr/share/icons/hicolor/8x8/devices/infrared-remote.png
-usr/share/icons/hicolor/scalable/actions/krcd_flash.svgz
-usr/share/icons/hicolor/scalable/actions/krcd_off.svgz
-usr/share/icons/hicolor/scalable/apps/krcd.svgz
-usr/share/icons/hicolor/scalable/devices/infrared-remote.svgz
-usr/share/kde4/apps/kremotecontrol/profiles/amarok.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/dragonplayer.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/klauncher.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/kmix.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/konqueror.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/kscd.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/okular.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/powermanagement.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/profile.xsd
-usr/share/kde4/apps/kremotecontrol/profiles/tomahawk.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/vlc.profile.xml
-usr/share/kde4/apps/kremotecontrol/profiles/vlc2.profile.xml
-usr/share/kde4/apps/kremotecontroldaemon/kremotecontroldaemon.notifyrc
-usr/share/kde4/services/kcm_remotecontrol.desktop
-usr/share/kde4/services/kded/kremotecontroldaemon.desktop
-usr/share/kde4/services/kremotecontrolbackends/kremotecontrol_lirc.desktop
-usr/share/kde4/services/plasma-engine-kremotecontrol.desktop
-usr/share/kde4/servicetypes/kremotecontrolmanager.desktop
