@@ -2,6 +2,11 @@ kremotecontrol (4:16.08.0-0r1) UNRELEASED; urgency=medium
 
   [ Pino Toscano ]
   * New upstream release.
+  * Force the local installation to debian/kremotecontrol, so there is no need
+    to copy things later from debian/tmp:
+    - manually remove the files that are not needed
+    - remove kremotecontrol.install, no more used now
+    - remove not-installed, no more used now
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 24 Aug 2016 19:14:16 +0200
 
